--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Movie Searcher</title>
   </head>
   <body style='background-color: #555555; margin: 0px; font-family: system-ui;'>
-    <div id="root"></div>   
+    <div id="root"></div> 
+    <div id="modal-root"></div>
   </body>
 </html>
